src/tests/snapshots/fluent_typed__tests__test_locales_missing_msg.snap
---
source: src/tests/mod.rs
expression: generated
---
// This file is generated. Do not edit it manually.
use crate::prelude::*;
use std::{
    fmt::Display,
    ops::{Deref, Range},
    slice::Iter,
    str::FromStr,
};

static LANG_DATA: &[u8] = include_bytes!("test_locales_missing_msg.ftl");
static MESSAGE_CONTRACTS: &[MessageContract] = &[
    MessageContract {
        message: "twenty-four-hour",
        attribute: None,
        vars: &[],
        bool_vars: &[],
        elements: &[],
    },
    MessageContract {
        message: "twelve-hour",
        attribute: None,
        vars: &[],
        bool_vars: &[],
        elements: &[],
    },
];

static ALL_LANGS: [L10n; 2] = [
    // languages as an array
    L10n::De,
    L10n::EnGb,
];

static DE: LanguageIdentifier = langid!("de");
static EN_GB: LanguageIdentifier = langid!("en-gb");

/// The languages that have translations available.
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub enum L10n {
    De,
    EnGb,
}

impl Default for L10n {
    fn default() -> Self {
        Self::EnGb
    }
}

impl FromStr for L10n {
    type Err = String;

    fn from_str(s: &str) -> Result<Self, Self::Err> {
        match s {
            "de" => Ok(Self::De),
            "en-gb" => Ok(Self::EnGb),
            _ => Err(format!("Unknown language: {}", s)),
        }
    }
}

impl Deref for L10n {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        match self {
            Self::De => "de",
            Self::EnGb => "en-gb",
        }
    }
}

impl AsRef<LanguageIdentifier> for L10n {
    fn as_ref(&self) -> &LanguageIdentifier {
        match self {
            Self::De => &DE,
            Self::EnGb => &EN_GB,
        }
    }
}

impl AsRef<str> for L10n {
    fn as_ref(&self) -> &str {
        self
    }
}

impl Display for L10n {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.deref())
    }
}

impl L10n {
    pub fn iter() -> Iter<'static, L10n> {
        ALL_LANGS.iter()
    }

    /// Negotiate the best language to use based on the `Accept-Language` header.
    ///
    /// Falls back to the default language if none of the languages in the header are available.
    pub fn langneg(accept_language: &str) -> L10n {
        negotiate_languages(accept_language, &ALL_LANGS)
    }

    fn byte_range(&self) -> Range<usize> {
        match self {
            Self::De => 0..107,
            Self::EnGb => 107..208,
        }
    }
    /// Load a L10nLanguage from the embedded data.
    pub fn load(&self) -> L10nLanguage {
        L10nLanguage::new(self, &LANG_DATA[self.byte_range()])
            .expect("fluent-typed: the embedded .ftl could not be loaded. This is a build-time bug; please report it.")
    }

    /// Load all languages (L10nLanguage) from the embedded data.
    pub fn load_all() -> L10nLanguageVec {
        L10nLanguageVec::load(
            LANG_DATA,
            Self::iter().map(|lang| (lang, lang.byte_range())),
        )
        .expect("fluent-typed: the embedded .ftl could not be loaded. This is a build-time bug; please report it.")
    }
}

/// A thin wrapper around the Fluent messages for one language.
///
/// It provides functions for each message that was found in
/// all the languages at build time.
pub struct L10nLanguage(L10nBundle);

impl L10nLanguage {
    /// Load the L10n resources for the given language. The language
    /// has to be a valid LanguageIdentifier or otherwise
    /// an error is returned.
    ///
    /// The bytes are expected to be the contents of a .ftl file
    pub fn new(lang: impl AsRef<str>, bytes: &[u8]) -> Result<Self, L10nError> {
        Ok(Self(L10nBundle::new(lang, bytes)?))
    }

    /// Like [`Self::new`], but takes ownership of the `.ftl` bytes, so a
    /// buffer that was just read or decompressed is reused instead of copied.
    pub fn new_owned(lang: impl AsRef<str>, bytes: Vec<u8>) -> Result<Self, L10nError> {
        Ok(Self(L10nBundle::new_owned(lang, bytes)?))
    }

    /// Load external `.ftl` bytes — read from disk, downloaded, etc. — after
    /// validating them against the message contract compiled into this API.
    ///
    /// On success, every accessor on the returned [`L10nLanguage`] is safe to
    /// call: the external translation defines every generated message and
    /// references no unknown variables. A translation that does not — because
    /// a message is missing, misspelled, or references a variable this API
    /// never fills — is rejected here with `L10nError::Validation` (listing
    /// every violation) instead of panicking later in an accessor.
    ///
    /// Use this to load a language that was not compiled in, or to hot-reload
    /// a translation under revision.
    pub fn new_external(lang: impl AsRef<str>, bytes: &[u8]) -> Result<Self, L10nError> {
        validate_ftl(bytes, MESSAGE_CONTRACTS)?;
        Self::new(lang, bytes)
    }

    /// Like [`Self::new_external`], but takes ownership of the `.ftl` bytes,
    /// e.g. straight from `std::fs::read`, instead of copying them.
    pub fn new_external_owned(lang: impl AsRef<str>, bytes: Vec<u8>) -> Result<Self, L10nError> {
        validate_ftl(&bytes, MESSAGE_CONTRACTS)?;
        Self::new_owned(lang, bytes)
    }

    pub fn msg_twenty_four_hour(&self) -> String {
        self.0.msg("twenty-four-hour", None).unwrap()
    }
    pub fn msg_twelve_hour(&self) -> String {
        self.0.msg("twelve-hour", None).unwrap()
    }
}
